Travel::Status::DE::IRIS 1.05 - Sun Dec 20 2015

    * Update station list. It now uses data supplied by the Deutsche Bahn
      Open Data portal.
    * db-iris: New option -x / --exact / --no-related
    * IRIS->new: New options main_cache, realtime_cache and with_related
    * IRIS: Add ->station and ->related_stations accessors
    * db-iris: Include related stations in query output (for instance,
      "Köln Messe Deutz" will include "Köln Messe Deutz (tief)" and
      "Köln Messe Deutz Gl. 9-10"). Use --exact / --no-related to disable this.
    * IRIS: Same. Also, IRIS->new can now be passed Cache objects to cache
      HTTP requests for a user-defined time. This is most useful when
      building infoscreens and similar, since the scheduled and station data
      never changes and can therefore be cached to decrease network load and
      increase response time.

Travel::Status::DE::IRIS 1.04 - Thu Nov 12 2015

    * Result: Add qos code 79 ("Ohne Mehrzweckabteil")
    * db-iris: Accept UIC station codes
    * Fix warnings with recent DateTime::Format::Strptime releases
    * Improve parser speed

Travel::Status::DE::IRIS 1.03 - Tue Sep 15 2015

    * Result: Add info key 900
    * Station: Improve get_station matching quality by using the Levenshtein
      edit distance in addition to simple substring matching
    * new dependency: Text::LevenshteinXS (see README for notes about
      drop-in replacements)
    * new dependency: List::UtilsBy

Travel::Status::DE::IRIS 1.02 - Tue May 26 2015

    * Added github repo to dist metadata and the doc
    * Result: distinguish between overcrowded trains (q97) and very overcrowded
      trains (q96)
    * Result: Verify delay key 60 ("delays because of storm")
    * Result: Add qos key 70 ("no wifi" -- not entirely sure yet)

Travel::Status::DE::IRIS 1.01 - Fri May 15 2015

    * IRIS->new: Fix default lwp_options value (was documented, but not used)
    * Result->route_interesting: Also consider airports